--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
 ADMIN_SECRET=uzumymw1998
-MONGODB_URL="mongodb+srv://azencodatabase:uzumymw1998@cluster0.lhqt9.mongodb.net/blog?retryWrites=true&w=majority&appName=Cluster0";
+MONGODB_URL=mongodb+srv://azencodatabase:uzumymw1998@cluster0.lhqt9.mongodb.net/blog?retryWrites=true&w=majority&appName=Cluster0
